--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "start:prod": "node server.js",
     "lint": "eslint --ext .js ."
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  },
   "dependencies": {
+    "nodemon": "^2.0.2",
     "apollo-server": "^2.11.0",
     "merge-graphql-schemas": "^1.7.6"
   }
