--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "lint": "eslint --ext .js ."
   },
   "dependencies": {
-    "nodemon": "^2.0.2",
     "apollo-server": "^2.11.0",
-    "merge-graphql-schemas": "^1.7.6"
+    "merge-graphql-schemas": "^1.7.6",
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
